Fix overflowing paragragh

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,10 @@
 :root {
   --default-font: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --search-bar-bg: #dad5d5c9;
+  --search-bar-bg: #dad5d559;
+  --search-bar-hover: #dad5d5a4;
   --button-bg: #008cffe7;
-  --main-bg: #dad5d5c9;
+  --main-bg: #e1f1f5c9;
   --info-font-color: #4e4c4c;
   --sidebar-bg-color: #008cffe7;
   --sidebar-font-color: #ffffff;
@@ -19,7 +20,9 @@ body {
   font-family: var(--default-font);
 }
 
-p {
+.main p {
+  max-height: 6rem;
+  overflow: hidden;
   color: var(--info-font-color);
 }
 
@@ -47,6 +50,10 @@ p {
   border-radius: 15px;
   background-color: var(--search-bar-bg);
   width: clamp(50px, 60%, 800px);
+}
+
+#search:hover {
+  background-color: var(--search-bar-hover);
 }
 
 .greetings {
@@ -136,6 +143,12 @@ p {
   grid-row: 1 / 4;
 }
 
+.card {
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 20px 30px;
+}
+
 .projects {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
@@ -144,13 +157,10 @@ p {
   max-width: 1600px;
 }
 
-.card {
+.project-cards {
   display: grid;
   align-content: space-between;
   border-left: 10px solid #1dbb1d;
-  border-radius: 10px;
-  padding: 15px;
-  background-color: #ffffff;
 }
 
 .card-buttons {
@@ -161,9 +171,6 @@ p {
 }
 
 .announcement-cards {
-  padding: 20px 30px;
-  border-radius: 10px;
-  background-color: #ffffff;
   font-size: 0.9rem;
 }
 
@@ -183,9 +190,6 @@ p {
 .trend-card {
   display: grid;
   gap: 15px;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: #ffffff;
   font-size: 0.9rem;
 }
 
